Fix spacing in About Me section for improved readability

--- a/style.css
+++ b/style.css
@@ -5,3 +5,9 @@ table{
     max-width: 1000px;
     width: 100%;
 }
+li{
+    font-size: 20px;
+}
+h2{
+    padding-top: 15px;
+}
